--- a/food_sales_predictions.ipynb
+++ b/food_sales_predictions.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "food-sales-predictions.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1frLqk2OXMwar4Ti0u1nshFuhuYignz-v",
-      "authorship_tag": "ABX9TyNxcQI4CI9X+vgqEV3TFA68",
+      "authorship_tag": "ABX9TyM3/ONuQMG+R/GExfZ6jHz4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +42,10 @@
       "source": [
         "import pandas as pd\n",
         "\n",
+        "# Reading data from mounted Google Drive for now.\n",
         "df = pd.read_csv(\"/content/drive/MyDrive/Colab Notebooks/food-sales-predictions/sales_predictions.csv\")\n",
+        "\n",
+        "# Verifying the data loaded properly.\n",
         "df.head()"
       ],
       "execution_count": 1,
