Changed model selection section to reflect new model performance

--- a/food_sales_predictions.ipynb
+++ b/food_sales_predictions.ipynb
@@ -1777,7 +1777,9 @@
       },
       "source": [
         "## Model Selection\n",
-        "I have selected the Linear Regression model given its better performance over the Decision Tree model. While both performed well on the R^2 score, Linear Regression won out in the Root Mean Squared Error, even after experimenting with maximum depth in the tree model."
+        "I have selected the Simple Tree Regression model given its better performance over the Linear Regression model. While neither performed as well as I'd like, the Simple Tree Regression model was able to perform almost equally well in training and testing.\n",
+        "\n",
+        "Recommend evaluating other models or revisiting the data to get better performance."
       ]
     },
     {
